# LuxTTS

./: README.md  pyproject.toml  requirements.txt
zipvoice/: luxvoice.py  modeling_utils.py
